fix the contrast ratio of the background and foreground colors as suggested by Accessibility audit

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -34,7 +34,7 @@
   font-size: 1rem;
   font-weight: bold;
 
-  color: darken($color5, 20);
+  color: darken($color5, 5);
 }
 
 .get-in-touch {
